--- a/app/src/main/res/layout/activity_main_task.xml
+++ b/app/src/main/res/layout/activity_main_task.xml
@@ -11,7 +11,7 @@
     <FrameLayout
         android:id="@+id/menu_content_layout"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:layout_weight="1">
 
     </FrameLayout>
@@ -24,4 +24,10 @@
         android:background="?android:attr/windowBackground"
         app:menu="@menu/navigation" />
 
+
+    <com.boulder.igotthis.task.TaskCreation
+        android:id="@+id/task_creation_menu"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
 </LinearLayout>
