--- a/app/src/main/res/layout/task_creation_layout.xml
+++ b/app/src/main/res/layout/task_creation_layout.xml
@@ -1,55 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/task_creation_main_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="30dp">
 
     <TextView
         android:id="@+id/event_drop_down_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/event_drop_down_list"
-        android:layout_centerHorizontal="true" />
+        android:text="@string/task_creation_on_event" />
 
-    <android.support.v7.widget.DropDownListView
+    <android.support.v7.widget.AppCompatSpinner
         android:id="@+id/event_drop_down_list"
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="66dp" />
+        android:layout_marginTop="10dp" />
 
-    <TextView
-        android:id="@+id/textView2"
+    <ScrollView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/action_drop_down_list"
-        android:layout_below="@id/event_drop_down_list"/>
+        android:layout_height="wrap_content">
 
-    <android.support.v7.widget.DropDownListView
-        android:id="@+id/action_drop_down_list"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:layout_below="@+id/event_drop_down_list"
-        android:layout_alignStart="@+id/event_drop_down_list"
-        android:layout_marginTop="92dp" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
-    <Button
-        android:id="@+id/button_reset"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/action_drop_down_list"
-        android:layout_marginBottom="27dp"
-        android:text="@string/task_creation_button_reset" />
+            <LinearLayout
+                android:id="@+id/item_action_select_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-    <Button
-        android:id="@+id/button_add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/action_drop_down_list"
-        android:layout_alignTop="@+id/button_reset"
-        android:text="@string/task_creation_button_add" />
+            </LinearLayout>
 
-</RelativeLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="50dp"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/button_reset"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="27dp"
+                    android:text="@string/task_creation_button_reset" />
+
+                <Button
+                    android:id="@+id/button_add"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:enabled="false"
+                    android:text="@string/task_creation_button_add" />
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
+</LinearLayout>
