--- a/app/src/main/res/layout/task_creation_layout.xml
+++ b/app/src/main/res/layout/task_creation_layout.xml
@@ -16,7 +16,9 @@
         android:id="@+id/event_drop_down_list"
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="10dp"
+        android:background="@color/colorPrimaryDark"
+        android:spinnerMode="dropdown"/>
 
     <ScrollView
         android:layout_width="wrap_content"
@@ -30,9 +32,7 @@
                 android:id="@+id/item_action_select_layout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-            </LinearLayout>
+                android:orientation="vertical" />
 
             <LinearLayout
                 android:layout_width="match_parent"
