--- a/app/src/main/res/layout/drop_down_item.xml
+++ b/app/src/main/res/layout/drop_down_item.xml
@@ -3,7 +3,7 @@
     android:id="@+id/drop_down_item_text"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
+    style="@style/DropDownStyle"
     android:gravity="center"
     android:padding="5dp"
     android:paddingStart="10dp"
