--- a/app/src/main/res/layout/task_creation_layout.xml
+++ b/app/src/main/res/layout/task_creation_layout.xml
@@ -17,7 +17,7 @@
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
-        android:background="@color/colorPrimaryDark"
+        style="@style/DropDownStyle"
         android:spinnerMode="dropdown"/>
 
     <ScrollView
