--- a/app/src/main/res/layout/task_creation_item_action.xml
+++ b/app/src/main/res/layout/task_creation_item_action.xml
@@ -3,25 +3,21 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_centerHorizontal="true"
-    android:layout_width="300dp"
-    android:layout_height="50dp">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <android.support.v7.widget.AppCompatSpinner
         android:id="@+id/item_drop_down_list"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_weight="0.3"
-        android:layout_margin="10dp" />
-    <android.support.v7.widget.AppCompatSpinner
-        android:id="@+id/action_drop_down_list"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_weight="0.3"
-        android:layout_margin="10dp" />
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_weight="0.9"
+        android:layout_margin="10dp"
+        style="@style/DropDownStyle"
+        android:spinnerMode="dropdown"/>
     <android.support.v7.widget.AppCompatImageButton
-        android:layout_width="10dp"
-        android:layout_height="match_parent"
-        android:layout_weight="0.3"
-        android:padding="10dp"
+        android:id="@+id/item_action_add_action_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.1"
         android:src="@mipmap/ic_launcher_round"/>
 </LinearLayout>
