Added initial initialization calls for TaskCreation

--- a/app/src/main/res/layout/activity_main_task.xml
+++ b/app/src/main/res/layout/activity_main_task.xml
@@ -30,7 +30,7 @@
     </FrameLayout>
 
     <android.support.design.widget.BottomNavigationView
-        android:id="@+id/navigation"
+        android:id="@+id/bottom_navigation_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="0dp"
