--- a/app/src/main/res/layout/drop_down_item.xml
+++ b/app/src/main/res/layout/drop_down_item.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (C) 2017 Ankit Sadana
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -16,11 +15,13 @@
   -->
 <CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/drop_down_item_text"
+    style="@style/DropDownStyle_Basic"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    style="@style/DropDownStyle"
+    android:ellipsize="marquee"
     android:gravity="center"
-    android:padding="5dp"
-    android:paddingStart="10dp"
-    android:maxLines="1"
-    android:ellipsize="marquee"/>
+    android:paddingBottom="@dimen/drop_down_item_padding_bottom_top"
+    android:paddingEnd="@dimen/drop_down_item_padding_start_end"
+    android:paddingStart="@dimen/drop_down_item_padding_start_end"
+    android:paddingTop="@dimen/drop_down_item_padding_bottom_top"
+    android:singleLine="true" />
